Fixed all noticeable font issues!